...
    <string name="title_app">ZHJ-Todo</string>
    <string name="add_task">添加任务</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="task_title">任务标题</string>
    <string name="task_score">任务分数</string>
    <string name="finish">完成</string>
    <string name="modify_task">修改任务</string>
    <string name="delete_task">删除任务</string>
    <string name="add_award">添加奖励</string>
    <string name="award_title">奖励标题</string>
    <string name="award_score">奖励分数</string>
    <string name="settings">设置</string>
    <string name="add_first_task">点击右下方加号以添加第一个任务</string>
    <string name="add_first_award">点击右下方加号以添加第一个奖励</string>
...
