...
        app:prefixTextAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:shapeAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_search_gray"
        app:suffixTextAppearance="@style/TextAppearance.Material3.TitleMedium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:inputType="text"
            android:paddingBottom="24dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
