...
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/manual_sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more"
        android:title="@string/more"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_search"
...
